--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   <title>readscore</title>
 
   <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-YTVYZDK0G2"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-FMHD96E2M9"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
-    gtag('config', 'G-YTVYZDK0G2');
+    gtag('config', 'G-FMHD96E2M9');
   </script>
 
   <!-- fontawesome -->
